// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EducationField /> matches snapshot 1`] = `
<select
  class="sc-iemXMA ezYUqe"
  id="educationField"
  name="name"
  type="text"
>
  <option
    class="sc-hHEjAm hmYdyr"
    disabled=""
    value="select"
  >
    wybierz 
  </option>
  <option
    value="none"
  >
    brak
  </option>
  <option
    value="primary"
  >
    podstawowe
  </option>
  <option
    value="vocational"
  >
    zawodowe
  </option>
  <option
    value="secondary"
  >
    średnie
  </option>
  <option
    value="higher"
  >
    wyższe licencjackie
  </option>
  <option
    value="masters"
  >
    wyższe magisterskie
  </option>
  <option
    value="phd"
  >
    wyższe doktorskie
  </option>
</select>
`;

exports[`<EducationField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-bkbjAj gnGQfC"
      >
        <select
          class="sc-iemXMA varr"
          id="educationField"
          label="Test"
          name="name"
          required=""
          type="text"
        >
          <option
            class="sc-hHEjAm hmYdyr"
            disabled=""
            value="select"
          >
            wybierz *
          </option>
          <option
            value="none"
          >
            brak
          </option>
          <option
            value="primary"
          >
            podstawowe
          </option>
          <option
            value="vocational"
          >
            zawodowe
          </option>
          <option
            value="secondary"
          >
            średnie
          </option>
          <option
            value="higher"
          >
            wyższe licencjackie
          </option>
          <option
            value="masters"
          >
            wyższe magisterskie
          </option>
          <option
            value="phd"
          >
            wyższe doktorskie
          </option>
        </select>
        <span
          class="sc-dIvqjp gGSLdt"
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<EducationField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-bkbjAj gnGQfC"
      >
        <select
          class="sc-iemXMA ezYUqe"
          id="educationField"
          label="Test"
          name="name"
          type="text"
        >
          <option
            class="sc-hHEjAm hmYdyr"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="none"
          >
            brak
          </option>
          <option
            value="primary"
          >
            podstawowe
          </option>
          <option
            value="vocational"
          >
            zawodowe
          </option>
          <option
            value="secondary"
          >
            średnie
          </option>
          <option
            value="higher"
          >
            wyższe licencjackie
          </option>
          <option
            value="masters"
          >
            wyższe magisterskie
          </option>
          <option
            value="phd"
          >
            wyższe doktorskie
          </option>
        </select>
        <span
          class="sc-dIvqjp gGSLdt"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`<EducationField /> select field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <div
        class="sc-bkbjAj gnGQfC"
      >
        <select
          class="sc-iemXMA varr"
          id="educationField"
          name="name"
          type="text"
        >
          <option
            class="sc-hHEjAm hmYdyr"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="none"
          >
            brak
          </option>
          <option
            value="primary"
          >
            podstawowe
          </option>
          <option
            value="vocational"
          >
            zawodowe
          </option>
          <option
            value="secondary"
          >
            średnie
          </option>
          <option
            value="higher"
          >
            wyższe licencjackie
          </option>
          <option
            value="masters"
          >
            wyższe magisterskie
          </option>
          <option
            value="phd"
          >
            wyższe doktorskie
          </option>
        </select>
        <span
          class="sc-dIvqjp gGSLdt"
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;
